OpenEmu/broker_build.log
Command line invocation:
    /Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild -project /Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/OpenEmu.xcodeproj -scheme broker -configuration Debug -destination platform=macOS,arch=arm64 build

Resolve Package Graph


Resolved source packages:
  ZIPFoundation: https://github.com/weichsel/ZIPFoundation @ 0.9.20
  Finite: https://github.com/vknabel/Finite.git @ 4.0.0
  Sparkle: https://github.com/sparkle-project/Sparkle @ 2.5.2
  swift-collections: https://github.com/apple/swift-collections.git @ 1.3.0

ComputePackagePrebuildTargetDependencyGraph

Prepare packages

CreateBuildRequest

SendProjectDescription

CreateBuildOperation

ComputeTargetDependencyGraph
note: Building targets in dependency order
note: Target dependency graph (1 target)
    Target 'broker' in project 'OpenEmu' (no dependencies)

GatherProvisioningInputs

CreateBuildDescription

ClangStatCache /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang-stat-cache /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.2.sdk /Users/barriesanders/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/macosx26.2-25C57-3885c01c3e6b6a337905948deab2002e00fa09913b459cbbc988d1f6730289ae.sdkstatcache
    cd /Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/OpenEmu.xcodeproj
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang-stat-cache /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.2.sdk -o /Users/barriesanders/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/macosx26.2-25C57-3885c01c3e6b6a337905948deab2002e00fa09913b459cbbc988d1f6730289ae.sdkstatcache

SwiftDriver broker normal arm64 com.apple.xcode.tools.swift.compiler (in target 'broker' from project 'OpenEmu')
    cd /Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu
    builtin-SwiftDriver -- /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc -module-name broker -Onone -enforce-exclusivity\=checked @/Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/Objects-normal/arm64/broker.SwiftFileList -DDEBUG_PRINT -DDEBUG -enable-bare-slash-regex -enable-experimental-feature DebugDescriptionMacro -sdk /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.2.sdk -target arm64-apple-macos11.0 -g -module-cache-path /Users/barriesanders/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -Xfrontend -serialize-debugging-options -enable-testing -index-store-path /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Index.noindex/DataStore -Xcc -D_LIBCPP_HARDENING_MODE\=_LIBCPP_HARDENING_MODE_DEBUG -swift-version 5 -I /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Products/Debug -F /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Products/Debug -c -j10 -enable-batch-mode -incremental -Xcc -ivfsstatcache -Xcc /Users/barriesanders/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/macosx26.2-25C57-3885c01c3e6b6a337905948deab2002e00fa09913b459cbbc988d1f6730289ae.sdkstatcache -output-file-map /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/Objects-normal/arm64/broker-OutputFileMap.json -use-frontend-parseable-output -save-temps -no-color-diagnostics -explicit-module-build -module-cache-path /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/SwiftExplicitPrecompiledModules -clang-scanner-module-cache-path /Users/barriesanders/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -sdk-module-cache-path /Users/barriesanders/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -serialize-diagnostics -emit-dependencies -emit-module -emit-module-path /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/Objects-normal/arm64/broker.swiftmodule -validate-clang-modules-once -clang-build-session-file /Users/barriesanders/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -I/Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/swift-overrides.hmap -emit-const-values -Xfrontend -const-gather-protocols-file -Xfrontend /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/Objects-normal/arm64/broker_const_extract_protocols.json -Xcc -iquote -Xcc /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/broker-generated-files.hmap -Xcc -I/Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/broker-own-target-headers.hmap -Xcc -I/Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/broker-all-target-headers.hmap -Xcc -iquote -Xcc /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/broker-project-headers.hmap -Xcc -I/Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Products/Debug/include -Xcc -I/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmuKit/Source/OpenEmuKitPrivate -Xcc -I/Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/DerivedSources-normal/arm64 -Xcc -I/Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/DerivedSources/arm64 -Xcc -I/Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/DerivedSources -Xcc -DDEBUG\=1 -Xcc -DDEBUG\=1 -Xcc -DDEBUG_PRINT -Xcc -DGL_SILENCE_DEPRECATION -Xcc -DQC_SILENCE_GL_DEPRECATION -emit-objc-header -emit-objc-header-path /Users/barriesanders/Library/Developer/Xcode/DerivedData/OpenEmu-goibvmjryqzywxczduoiwoaextyj/Build/Intermediates.noindex/OpenEmu.build/Debug/broker.build/Objects-normal/arm64/broker-Swift.h -working-directory /Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu -experimental-emit-module-separately -disable-cmo
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/broker/main.swift:25:8: error: Unable to find module dependency: 'OpenEmuKit'
import OpenEmuKit
       ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/broker/main.swift:25:8: note: a dependency of main module 'broker'
import OpenEmuKit
       ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/broker/main.swift:25:8: error: Unable to find module dependency: 'OpenEmuKit'
import OpenEmuKit
       ^ (in target 'broker' from project 'OpenEmu')
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/broker/main.swift:25:8: note: A dependency of main module 'broker'
import OpenEmuKit
       ^ (in target 'broker' from project 'OpenEmu')

** BUILD FAILED **


The following build commands failed:
	SwiftDriver broker normal arm64 com.apple.xcode.tools.swift.compiler (in target 'broker' from project 'OpenEmu')
	Building project OpenEmu with scheme broker and configuration Debug
(2 failures)
